@@ -18,8 +18,10 @@ enum {
 	HXBT_ICMP  = 1 << 4,
 	/* use strcmp() -- abbreviation for HXBT_CMPFN,strcmp */
 	HXBT_SCMP  = 1 << 5,
+	HXBT_SKEY  = 1 << 5, /* init2 */
 	/* use CIDs for traverser */
 	HXBT_CID   = 1 << 6,
+	HXBT_SDATA = 1 << 7, /* init2 */
 };
 
 struct HXbtree_node {
@@ -49,6 +51,11 @@ struct HXbtree {
 };
 
 extern struct HXbtree *HXbtree_init(unsigned int, ...);
+extern struct HXbtree *HXbtree_init2(unsigned int,
+	int (*)(const void *, const void *, size_t),
+	void *(*)(const void *, size_t), void (*)(void *),
+	void *(*)(const void *, size_t), void (*)(void *),
+	size_t, size_t);
 extern struct HXbtree_node *HXbtree_add(struct HXbtree *, const void *, ...);
 extern struct HXbtree_node *HXbtree_find(const struct HXbtree *, const void *);
 extern void *HXbtree_get(const struct HXbtree *, const void *);
